objects/CSS_Solution_Component__c.object
<CustomObject>
    <fields>
        <fullName>SysCodeAndCompCode__c</fullName>
        <formula>System_Code__c + Component_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SysCodeAndCompCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemCode_Desc__c</fullName>
        <label>SystemCode_Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Code__c</fullName>
        <label>System Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>A field to differentiate Camp,TRP &amp; ATCs from Solution Component</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Component__c</fullName>
        <externalId>true</externalId>
        <label>Unique Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyId__c</fullName>
        <label>WarrantyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSS Solution Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Solutions__c</columns>
        <columns>Component_Id__c</columns>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Service_Job__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL_Service_Job__c</field>
            <operation>equals</operation>
            <value>00133825</value>
        </filters>
        <filters>
            <field>Solutions__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Solution Components</pluralLabel>
    <recordTypes>
        <fullName>EVL</fullName>
        <active>true</active>
        <description>Field Action Record type for EVL User</description>
        <label>EVL</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldActions</fullName>
        <active>true</active>
        <description>Used to insert Field actions Records</description>
        <label>FieldActions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL_ServOrder_Closed_RelatedList_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(ISPICKVAL(FSL_Service_Order__r.Status, &quot;Closed&quot;),
   ISPICKVAL(FSL_Service_Order__r.Status, &quot;Canceled&quot;)),   
OR(
ISCHANGED(Performed__c), 
ISCHANGED(Performed_Review__c)
))</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Failure_Name_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Failure Name cannot be Edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Solcomp_CheckIfPerformed</fullName>
        <active>true</active>
        <description>Display error message if Check if performed is checked and required to performed is unchecked</description>
        <errorConditionFormula>AND(Performed_Review__c = FALSE, Performed__c =TRUE)</errorConditionFormula>
        <errorDisplayField>Performed_Review__c</errorDisplayField>
        <errorMessage>Required to Perform must be checked when Check if Performed is checked</errorMessage>
    </validationRules>
</CustomObject>